src/test/ui/async-await/issue-86507.stderr
error: future cannot be sent between threads safely
  --> $DIR/issue-86507.rs:17:13
   |
LL | /             Box::pin(
LL | |                 async move {
LL | |                     let x = x;
LL | |                 }
LL | |             )
   | |_____________^ future created by async block is not `Send`
   |
note: captured value is not `Send` because `&` references cannot be sent unless their referent is `Sync`
  --> $DIR/issue-86507.rs:19:29
   |
LL |                     let x = x;
   |                             ^ has type `&T` which is not `Send`, because `T` is not `Sync`
   = note: required for the cast to the object type `dyn Future<Output = ()> + Send`
help: consider further restricting type parameter `T`
   |
LL |         where 'me:'async_trait, T: std::marker::Sync {
   |                               ++++++++++++++++++++++

error: aborting due to previous error

